adding responsive size

--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -1,100 +1,95 @@
 @import '../../breakpoints';
-
 .about-container{
     width: 100%;
-    height: 720px;
+    height: fit-content;
     background-color: #0A0A0D;
     color: #fff;
     padding-top: 70px;
-    padding-bottom: 127px;
-}
-.about-container .title-about{
-    margin: 0px auto;
-    text-align: center;
-    font-weight: bold;
-    font-size: 50px;
-}
+    padding-bottom: 50px;
+    .title-about{
+        margin: 0px auto;
+        text-align: center;
+        font-weight: bold;
+        font-size: 50px;
+        span{
+            color: #0A0A0D;
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: #64BD00;
+        }
+    }
+    
+    .content-container-about{
+        display: flex;
+        width: 80%;
+        margin: 25px auto;
+        flex-direction: row;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        height: 100%;
+        align-items: center;
+        margin-top: 35px;
+        .profile-section{
+            width: 47%;
+        }
+        .presentation {
+            .presentation__title{
+                font-weight: 600;
+                font-size: 24px;
+                -webkit-text-stroke-width: 1px;
+                -webkit-text-stroke-color: #fff;
+                span{
+                    color: #64BD00;
+                    -webkit-text-stroke-width: 1px;
+                    -webkit-text-stroke-color: #64BD00;;
+                    
+                }
+            }     
+            .presentation__content{
+                line-height: 168.4%;
+                font-size: 20px;
+                text-align: justify;
 
-.about-container .title-about span{
-    color: #0A0A0D;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #64BD00;
-}
+            }
+            .btn-download-cv{
+                background-color: #64BD00;
+                color: #fff;
+                border: none;
+                border-radius: 40px;
+                width: 391px;
+                height: 62px;
+                font-weight: 600;
+                font-size: 20px;
+                cursor: pointer;
+            }
+            
+        }
 
-.about-container .content-container-about{
-    display: flex;
-    width: 80%;
-    margin: 0 auto;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    height: 100%;
-    align-items: center;
-}
-.about-container .content-container-about .profile-section{
-    width: 47%;
- }
+        .profile-data{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            .profile__column-one, .profile__column-two {
+                width: 47%;
+            }
+            .profile__column-one .about-item,  .profile__column-two .about-item{
+                font-size: 22px;
+                font-weight: 600;
+                -webkit-text-stroke-width: 1px;
+                -webkit-text-stroke-color: #fff;
+                line-height: 168.4%;
 
-
- .presentation .presentation__title{
-     font-weight: 600;
-     font-size: 24px;
-     -webkit-text-stroke-width: 1px;
-     -webkit-text-stroke-color: #fff;;
-
- }
- .presentation .presentation__title span{
-     color: #64BD00;
-     -webkit-text-stroke-width: 1px;
-     -webkit-text-stroke-color: #64BD00;;
-     
- }
-
- .presentation .presentation__content{
-    line-height: 168.4%;
-    font-size: 24px;
-    text-align: justify;
- }
-
- .content-container-about .presentation .btn-download-cv{
-     background-color: #64BD00;
-     color: #fff;
-     border: none;
-     border-radius: 40px;
-     width: 391px;
-     height: 62px;
-     font-weight: 600;
-     font-size: 24px;
-     cursor: pointer;
- }
-
- .profile-data{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
- }
-
-
- .profile-data .profile__column-one, .profile-data .profile__column-two {
-     width: 47%;
- }
-
- .profile-data .profile__column-one .about-item, .profile-data .profile__column-two .about-item{
-     font-size: 24px;
-     font-weight: 600;
-     -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #fff;
-    line-height: 168.4%;
- }
-
- .profile-data .profile__column-one .about-item span, .profile-data .profile__column-two .about-item span{
-    font-size: 22px;
-    font-weight: lighter;
-    margin-left: 8px;
-    -webkit-text-stroke-width: 0px;
+                span {
+                    font-size: 20px;
+                    font-weight: lighter;
+                    margin-left: 8px;
+                    -webkit-text-stroke-width: 0px;
+                }
+            }
+        }
+    }
 }
 
-@media (min-width: $laptops) {
+@media (max-width: $laptops) {
  
     .about-container{
         width: 100%;
@@ -129,6 +124,18 @@
     }
     .about-container .content-container-about .profile-section{
         width: 47%;
+
+        .btn-download-cv{
+            background-color: #64BD00;
+            color: #fff;
+            border: none;
+            border-radius: 40px;
+            width: 386px;
+            height: 58px;
+            font-weight: 600;
+            font-size: 20px;
+            cursor: pointer;
+        }
     }
 
 
@@ -152,17 +159,6 @@
         text-align: justify;
     }
 
-    .content-container-about .presentation .btn-download-cv{
-        background-color: #64BD00;
-        color: #fff;
-        border: none;
-        border-radius: 40px;
-        width: 386px;
-        height: 58px;
-        font-weight: 600;
-        font-size: 20px;
-        cursor: pointer;
-    }
 
     .profile-data{
         display: flex;
@@ -190,4 +186,100 @@
         -webkit-text-stroke-width: 0px;
     }
    
+}
+
+@media (max-width: $mobile) { 
+    
+    .about-container{
+        width: 100%;
+        height: fit-content;
+        background-color: #0A0A0D;
+        color: #fff;
+        padding-top: 70px;
+        padding-bottom: 70px;
+        .title-about{
+            margin: 0px auto;
+            text-align: center;
+            font-weight: bold;
+            font-size: 44px;
+            span{
+                color: #0A0A0D;
+                -webkit-text-stroke-width: 1px;
+                -webkit-text-stroke-color: #64BD00;
+            }
+        }
+        
+        .content-container-about{
+            display: flex;
+            width: 90%;
+            margin: 0 auto;
+            flex-direction: column;
+            justify-content: space-around;
+            flex-wrap: nowrap;
+            height: fit-content;
+            align-items: center;
+            .profile-section{
+                width: 80%;
+            }
+            .presentation {
+                .presentation__title{
+                    font-weight: 600;
+                    font-size: 20px;
+                    -webkit-text-stroke-width: 1px;
+                    -webkit-text-stroke-color: #fff;
+                    span{
+                        color: #64BD00;
+                        -webkit-text-stroke-width: 1px;
+                        -webkit-text-stroke-color: #64BD00;;
+                        
+                    }
+                }     
+                .presentation__content{
+                    line-height: 168.4%;
+                    font-size: 18px;
+                    text-align: justify;
+                    
+                }
+                .btn-download-cv{
+                    background-color: #64BD00;
+                    color: #fff;
+                    border: none;
+                    border-radius: 40px;
+                    width: fit-content;
+                    height: fit-content;
+                    padding: 10px 18px;
+                    font-weight: 600;
+                    font-size: 18px;
+
+                }
+                
+            }
+
+            .profile-data{
+                margin-top: 20px;
+                display: flex;
+                flex-direction: column;
+                flex-wrap: nowrap;
+                .profile__column-one, .profile__column-two {
+                    width: 90%;
+                }
+                .profile__column-one .about-item,  .profile__column-two .about-item{
+                    font-size: 18px;
+                    font-weight: 600;
+                    -webkit-text-stroke-width: .5px;
+                    -webkit-text-stroke-color: #fff;
+                    line-height: 168.4%;
+                    margin: 3px;
+
+                    span {
+                        font-size: 22px;
+                        font-weight: lighter;
+                        margin-left: 8px;
+                        -webkit-text-stroke-width: 0px;
+                    }
+                }
+            }
+        }
+    }
+
 }
