--- a/src/components/portfolio/PortfolioSection.scss
+++ b/src/components/portfolio/PortfolioSection.scss
@@ -1,3 +1,6 @@
+@import '../../breakpoints';
+
+
 .portfolio-container {
     width: 100%;
     padding: 65px 0px;
@@ -22,6 +25,7 @@
         border-bottom: 1px solid #64bd00;
         width: fit-content;
         margin: 0px auto;
+        font-size: 20px;
         span {
             color: #fff;
             margin:5px 8px;
@@ -41,7 +45,7 @@
         justify-content: space-around;
 
         .portfolio-projects-container__card {
-            width: 300px;
+            width: 400px;
             height: fit-content;
             margin: 15px 0px;
             border-radius: 7px;
@@ -52,6 +56,7 @@
                 width: 90%;
                 margin: 10px auto;
                 border-radius: 7px;
+                font-size: 20px;
                 font-weight: 600;
             }
             .description-proyect {
@@ -63,6 +68,7 @@
                 padding: 4px;
                 text-align: justify;
                 height: 90px;
+                font-size: 18px;
                 overflow-y:scroll;
                 &::-webkit-scrollbar {
                     width: 10px;
@@ -96,6 +102,7 @@
                 background-color: rgba(255, 255, 255, 0.301);
                 height: 80px;
                 overflow-y:scroll;
+                font-size: 18px;
                 &::-webkit-scrollbar {
                     width: 10px;
                 }
@@ -132,14 +139,336 @@
                 border-radius: 7px;
                 background-color: rgba(255, 255, 255, 0.301);
                 text-align: center;
-                border-bottom: thin solid #64bd00;
                 cursor: pointer;
-
-                color: #64BD00;
+                font-size: 22px;
+                background-color: #000;
+                color: #000;
                 -webkit-text-stroke-width: 1px;
-                -webkit-text-stroke-color: #000;
+                -webkit-text-stroke-color: #64BD00;
             }
         }
 
+    }
+}
+
+@media (max-width: $laptops) {
+
+    .portfolio-container {
+        width: 100%;
+        padding: 65px 0px;
+        background-color: #000;
+        height: fit-content;
+        .title-portfolio {
+            margin: 0px auto;
+            text-align: center;
+            font-weight: bold;
+            font-size: 40px;
+            color: #fff;
+            margin-bottom: 45px;
+            span {
+                color: #0A0A0D;
+                -webkit-text-stroke-width: 1px;
+                -webkit-text-stroke-color: #64BD00;
+            }    
+        }
+        .btns-list-projects {
+            display: flex;
+            flex-direction: row;
+            border-bottom: 1px solid #64bd00;
+            width: fit-content;
+            margin: 0px auto;
+            span {
+                color: #fff;
+                margin:5px 8px;
+                font-weight: bold;
+                cursor: pointer; 
+            }
+            .active {
+                border-bottom: 2px solid #64bd00;
+            } 
+        }
+        .portfolio-projects-container {
+            width: 80%;
+            height: fit-content;
+            display: flex;
+            flex-wrap: wrap;
+            margin: 0px auto;
+            justify-content: space-around;
+    
+            .portfolio-projects-container__card {
+                width: 300px;
+                height: fit-content;
+                margin: 15px 0px;
+                border-radius: 7px;
+                //color: #fff;
+                .title-proyect {
+                    text-align: center;
+                    background-color: rgba(255, 255, 255, 0.301);
+                    width: 90%;
+                    margin: 10px auto;
+                    border-radius: 7px;
+                    font-weight: 600;
+                }
+                .description-proyect {
+                    background-color: rgba(255, 255, 255, 0.301);
+                    width: 90%;
+                    margin: 10px auto;
+                    border-radius: 7px;
+                    font-size: 16px;
+                    padding: 4px;
+                    text-align: justify;
+                    height: 90px;
+                    overflow-y:scroll;
+                    &::-webkit-scrollbar {
+                        width: 10px;
+                    }
+                    
+                    /* Track */
+                    &::-webkit-scrollbar-track {
+                        /* background: #f1f1f1;  */
+                        background: rgba(0, 0, 0, 0); 
+                    }
+                    
+                    /* Handle */
+                    &::-webkit-scrollbar-thumb {
+                        /* background: #888; */
+                        background: #64BD00;
+                        border-radius: 7px; 
+                    }
+                    
+                    /* Handle on hover */
+                    &::-webkit-scrollbar-thumb:hover {
+                        background: #555; 
+                    }
+                }
+    
+                .technologies {
+                    width: 90%;
+                    padding: 0px;
+                    margin: 10px auto;
+                    border-radius: 7px;
+                    list-style: none;
+                    background-color: rgba(255, 255, 255, 0.301);
+                    height: 80px;
+                    overflow-y:scroll;
+                    font-size: 16px;
+                    &::-webkit-scrollbar {
+                        width: 10px;
+                    }
+                    
+                    /* Track */
+                    &::-webkit-scrollbar-track {
+                        /* background: #f1f1f1;  */
+                        background: rgba(0, 0, 0, 0); 
+                    }
+                    
+                    /* Handle */
+                    &::-webkit-scrollbar-thumb {
+                        /* background: #888; */
+                        background: #64BD00;
+                        border-radius: 7px; 
+                    }
+                    
+                    /* Handle on hover */
+                    &::-webkit-scrollbar-thumb:hover {
+                        background: #555; 
+                    }
+                    .technologies-title {
+                        margin: 0 auto;
+                        text-align: center;
+                    }
+                    li {
+                        text-decoration: none;
+                        margin-left: 5px;
+                    }
+                }
+                .go-to-details, .go-to-proyect {
+                    width: 90%;
+                    margin: 10px auto;
+                    border-radius: 7px;
+                    background-color: rgba(255, 255, 255, 0.301);
+                    text-align: center;
+                    cursor: pointer;
+                    font-size: 18px;
+                    background-color: #000;
+                    color: #000;
+                    -webkit-text-stroke-width: 0.2px;
+                    -webkit-text-stroke-color: #64BD00;
+                }
+            }
+    
+        }
+    }
+}
+
+
+@media (max-width: $mobile) {
+    .portfolio-container {
+        width: 100%;
+        padding: 65px 0px;
+        background-color: #000;
+        height: fit-content;
+        .title-portfolio {
+            margin: 0px auto;
+            text-align: center;
+            font-weight: bold;
+            font-size: 40px;
+            color: #fff;
+            margin-bottom: 45px;
+            span {
+                color: #0A0A0D;
+                -webkit-text-stroke-width: 1px;
+                -webkit-text-stroke-color: #64BD00;
+            }    
+        }
+        .btns-list-projects {
+            display: flex;
+            flex-direction: row;
+            border-bottom: 1px solid #64bd00;
+            width: fit-content;
+            margin: 0px auto;
+            font-size: 16px;
+            span {
+                color: #fff;
+                margin:5px 8px;
+                font-weight: bold;
+                cursor: pointer; 
+            }
+            .active {
+                border-bottom: 2px solid #64bd00;
+            } 
+        }
+        .portfolio-projects-container {
+            width: 80%;
+            height: 70vh;
+            display: flex;
+            flex-wrap: wrap;
+            margin: 0px auto;
+            justify-content: space-around;
+            overflow-y:scroll;
+            &::-webkit-scrollbar {
+                width: 10px;
+            }
+            
+            /* Track */
+            &::-webkit-scrollbar-track {
+                /* background: #f1f1f1;  */
+                background: #000; 
+            }
+            
+            /* Handle */
+            &::-webkit-scrollbar-thumb {
+                /* background: #888; */
+                background: #64BD00;
+                border-radius: 7px; 
+            }
+            
+            /* Handle on hover */
+            &::-webkit-scrollbar-thumb:hover {
+                background: #555; 
+            }
+    
+            .portfolio-projects-container__card {
+                width: 300px;
+                height: fit-content;
+                margin: 15px 0px;
+                border-radius: 7px;
+                //color: #fff;
+                .title-proyect {
+                    text-align: center;
+                    background-color: rgba(255, 255, 255, 0.301);
+                    width: 90%;
+                    margin: 10px auto;
+                    border-radius: 7px;
+                    font-weight: 600;
+                }
+                .description-proyect {
+                    background-color: rgba(255, 255, 255, 0.301);
+                    width: 90%;
+                    margin: 10px auto;
+                    border-radius: 7px;
+                    font-size: 16px;
+                    padding: 4px;
+                    text-align: justify;
+                    height: 90px;
+                    overflow-y:scroll;
+                    &::-webkit-scrollbar {
+                        width: 10px;
+                    }
+                    
+                    /* Track */
+                    &::-webkit-scrollbar-track {
+                        /* background: #f1f1f1;  */
+                        background: rgba(0, 0, 0, 0); 
+                    }
+                    
+                    /* Handle */
+                    &::-webkit-scrollbar-thumb {
+                        /* background: #888; */
+                        background: #64BD00;
+                        border-radius: 7px; 
+                    }
+                    
+                    /* Handle on hover */
+                    &::-webkit-scrollbar-thumb:hover {
+                        background: #555; 
+                    }
+                }
+    
+                .technologies {
+                    width: 90%;
+                    padding: 0px;
+                    margin: 10px auto;
+                    border-radius: 7px;
+                    list-style: none;
+                    background-color: rgba(255, 255, 255, 0.301);
+                    height: 80px;
+                    overflow-y:scroll;
+                    &::-webkit-scrollbar {
+                        width: 10px;
+                    }
+                    
+                    /* Track */
+                    &::-webkit-scrollbar-track {
+                        /* background: #f1f1f1;  */
+                        background: rgba(0, 0, 0, 0); 
+                    }
+                    
+                    /* Handle */
+                    &::-webkit-scrollbar-thumb {
+                        /* background: #888; */
+                        background: #64BD00;
+                        border-radius: 7px; 
+                    }
+                    
+                    /* Handle on hover */
+                    &::-webkit-scrollbar-thumb:hover {
+                        background: #555; 
+                    }
+                    .technologies-title {
+                        margin: 0 auto;
+                        text-align: center;
+                    }
+                    li {
+                        text-decoration: none;
+                        margin-left: 5px;
+                    }
+                }
+                .go-to-details, .go-to-proyect {
+                    width: 90%;
+                    margin: 10px auto;
+                    border-radius: 7px;
+                    background-color: rgba(255, 255, 255, 0.301);
+                    text-align: center;
+                    border-bottom: thin solid #64bd00;
+                    cursor: pointer;
+    
+                    color: #64BD00;
+                    -webkit-text-stroke-width: 1px;
+                    -webkit-text-stroke-color: #000;
+                }
+            }
+    
+        }
     }
 }
