--- a/src/components/education/Education.scss
+++ b/src/components/education/Education.scss
@@ -453,16 +453,18 @@
                     border-radius: 7px;
                     padding: 15px 0px;
                     margin-bottom: 40px;
-                    height: 170px;
+                    height: fit-content;
     
                     .education-container__card--title {
                         color: #fff;
                         font-weight: 600;
                         width: 95%;
                         margin: 0px auto;
+                        font-size: 18px;
                     }
     
                     .education-container__card--subtitle {
+                        font-size: 16px;
                         width: 95%;
                         margin: 0px auto;
                         color: #fff;
@@ -483,6 +485,7 @@
                         color: #fff;
                         margin-top: 15px;
                         text-align: justify;
+                        font-size: 16px;
                     }
                 }
             }
@@ -521,13 +524,14 @@
                     border-radius: 7px;
                     padding: 15px 0px;
                     margin-bottom: 40px;
-                    height: 170px;
+                    height: fit-content;
     
                     .experience-container__card--title {
                         color: #fff;
                         font-weight: 600;
                         width: 95%;
                         margin: 0px auto;
+                        font-size: 18px;
                     }
     
                     .experience-container__card--subtitle {
@@ -551,6 +555,7 @@
                         color: #fff;
                         margin-top: 15px;
                         text-align: justify;
+                        font-size: 16px;
                     }
                 }
             }
