--- a/src/components/knowledge/Knowledge.scss
+++ b/src/components/knowledge/Knowledge.scss
@@ -26,6 +26,29 @@
         margin: 0px auto;
         font-size: 20px;
         justify-content: space-between;
+        height: 400px;
+        overflow-y:scroll;
+        &::-webkit-scrollbar {
+            width: 10px;
+        }
+        
+        /* Track */
+        &::-webkit-scrollbar-track {
+            /* background: #f1f1f1;  */
+            background: #000; 
+        }
+        
+        /* Handle */
+        &::-webkit-scrollbar-thumb {
+            /* background: #888; */
+            background: #64BD00;
+            border-radius: 7px; 
+        }
+        
+        /* Handle on hover */
+        &::-webkit-scrollbar-thumb:hover {
+            background: #555; 
+        }
         .first-section-knowledges {
             width: 50%;
             .knowledge-item {
